# lomb_wrapper

./: .gitignore  .gitmodules  Makefile  README.md  TODO  TODO.md  main.py  pyproject.toml  requirements.txt
lib/: __init__.py
lomb_wrapper/: class_linked_rois.py  class_lomb.py  class_polarization.py  class_signal_arrays.py  class_signals.py  class_window_info.py  main.py  main_window.py  paths.py  signal_names.py  ui_mainwindow.py  utils.py
lomb_wrapper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
lomb_wrapper/ui/: MainWindow.ui
src/: class_linked_rois.py  class_lomb.py  class_polarization.py  class_signal_arrays.py  class_signals.py  class_window_info.py  main_window.py  paths.py  utils.py
ui/: MainWindow.ui
